# esp32s3_wifi_st77916

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  partitions_singleapp.csv  platformio.ini  sdkconfig.4d_systems_esp32s3_gen4_r8n16  sdkconfig.defaults  st77916_lcd.c  st77916_lcd.h
scripts/: extra_script.py
src/: CMakeLists.txt  lvgl_port.c  lvgl_port.h  main.c
src/config/: lcd_config.h
src/drivers/: cst820_touch.c  cst820_touch.h  st77916_lcd.c  st77916_lcd.h
src/ui/: wifi_scan_ui.c  wifi_scan_ui.h
src/wifi/: wifi_scan.c  wifi_scan.h
